--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,6 +1,7 @@
 <script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
 <script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
 
+
 <h1>Welcome to Spotfinder</h1>
 
 <div id="message">Viewing all spots, input your address to filter to your local spots</div>
@@ -9,7 +10,7 @@
   <div id="map" style='width: 800px; height: 400px;'></div>
 </div>
 
-<h2>Nearby spots</h2>
+<h2 id="nearby">Nearby spots</h2>
 <ul>
 
 </ul>
