--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,18 +1,4 @@
-<script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
-<script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
-
-<h1>Welcome to Spotfinder</h1>
-
-<div id="message">Viewing all spots, input your address to filter to your local spots</div>
-
-<div style='width: 800px;'>
-  <div id="map" style='width: 800px; height: 400px;'></div>
-</div>
-
-<h2>Nearby spots</h2>
-<ul>
-
-</ul>
+<h1>Edit Spots</h1>
 
 <table>
   <tr>
@@ -42,19 +28,10 @@
 <% end %>
 </table>
 
-<br />
+<br>
 
-<%= link_to 'New Spot', new_spot_path %>
-
-<script type="text/javascript">
-  handler = Gmaps.build('Google');
-  handler.buildMap({ provider: {}, internal: {id: 'map' }}, function() {
-    markers = handler.addMarkers(<%=raw @hash.to_json %>);
-    
-    handler.bounds.extendWith(markers);
-    handler.fitMapToBounds();
-  });
-</script>
+<div><%= link_to 'Home', root_path %></div>
+<div><%= link_to 'New Spot', new_spot_path %></div>
 
 
 
